# cryptoapidocs

./: .gitignore  Cargo.toml  README.md  binance_spot_rest_api_docs.md  package.json  scratch.txt
cryptoapidocs-macros/: Cargo.toml
cryptoapidocs-macros/src/: lib.rs
docs/: binance_spot_rest_api_docs.md
docs/binance/coinm/: private_rest_api.md  private_websocket_api.md  public_rest_api.md  public_websocket_api.md
docs/binance/derivatives/: binance_derivatives_coinm_private_rest_api_docs.md  binance_derivatives_coinm_public_api_docs.md  binance_derivatives_coinm_public_rest_api_docs.md  binance_deriviatves_coinm_api_docs.md  binance_deriviatves_usdm_api_docs.md
docs/binance/options/: private_rest_api.md  private_websocket_api.md  public_rest_api.md  public_websocket_api.md
docs/binance/spot/: binance_spot_fix_api_docs.md  binance_spot_rest_api_docs.md  binance_spot_sbe_api_docs.md  binance_spot_websocket_api_docs.md  fix_api.md  market_data_sbe_api.md  private_rest_api.md  private_websocket_api.md  public_rest_api.md  public_websocket_api.md
docs/binance/usdm/: private_rest_api.md  private_websocket_api.md  public_rest_api.md  public_websocket_api.md
docs/okx/: private_order_book_trading_rest_api.md  private_order_book_trading_websocket_api.md  public_market_data_rest_api.md  public_market_data_websocket_api.md
okx/: Cargo.toml  config.json
okx/src/: config.rs  main.rs
scripts/: parse_markdown.js
src/: main.rs  token_counter.rs
src/exchanges/: doc_processor.rs  mod.rs  processor_registry.rs
src/utils/: mod.rs  token_counter.rs
(+49 files in other folders)
