[package]
name = "cryptoapidocs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
scraper = "0.23.1"
tokio = { version = "1", features = ["full"] }
html2md = "0.2.15"
tiktoken-rs = "0.6.0"
chrono = "0.4"
clap = { version = "4.5.1", features = ["derive"] }
inventory = "0.3"
once_cell = "1.19"
async-trait = "0.1"
